--- a/samples/simple.html
+++ b/samples/simple.html
@@ -66,7 +66,7 @@
 						animation:"8s ease",
 						playState:'running'
 					}}
-				>Plutonium Atomic!</Atomic>;
+				>zzzzzzzzzzzz</Atomic>;
 			}
 		}
 		ReactDOM.render(<App/>, document.querySelector('#root'));
