--- a/samples/controlled1.html
+++ b/samples/controlled1.html
@@ -43,7 +43,7 @@
 	<!-- React and Babel -->
 	<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-	<script src = "https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js" crossorigin></script>
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js" crossorigin></script>
 	
 	<!-- @plutonium-js/react-atomic component -->
 	<script src="https://cdn.jsdelivr.net/npm/@plutonium-js/react-atomic@1/dist/bundle.min.js"></script>   
