--- a/samples/controlled3.html
+++ b/samples/controlled3.html
@@ -108,7 +108,7 @@
 	<script src = "https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js" crossorigin></script>
 	
 	<!-- @plutonium-js/react-atomic component -->
-    <script src="https://cdn.jsdelivr.net/npm/@plutonium-js/react-atomic@1/dist/bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@plutonium-js/react-atomic@1/dist/bundle.js"></script>
 	<!-- sample script -->
 	<script type="text/babel">
 		class App extends React.Component{
